Turbine Scala outline: improve parsing/lowering and stabilize tests
- carry template-body imports into lowering and resolve qualified types before builtin mappings
- add literal/tuple inference, varargs handling, and default-param dependency tracking
- align lowering with scalac (modifiers, name encoding, trait val abstractness, case companion Serializable, no package-class ctor)
- update ScalaLowerSuite expectations and ScalaConformanceSuite defaults
- refine input-compat suite to subset-compare outlines

Tests: coursier launch sbt -- --client turbinec/test