@@ -22,7 +22,6 @@ import static java.util.Objects.requireNonNull;
 import com.google.common.base.Joiner;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
 import com.google.turbine.binder.bound.EnumConstantValue;
 import com.google.turbine.binder.bound.TurbineAnnotationValue;
 import com.google.turbine.binder.bound.TurbineClassValue;
@@ -39,18 +38,10 @@ import com.google.turbine.binder.sym.ClassSymbol;
 import com.google.turbine.binder.sym.FieldSymbol;
 import com.google.turbine.binder.sym.Symbol;
 import com.google.turbine.diag.SourceFile;
-import com.google.turbine.diag.TurbineDiagnostic;
 import com.google.turbine.diag.TurbineError;
 import com.google.turbine.diag.TurbineError.ErrorKind;
 import com.google.turbine.diag.TurbineLog.TurbineLogWithSource;
 import com.google.turbine.model.Const;
-import com.google.turbine.model.Const.ArrayInitValue;
-import com.google.turbine.model.Const.CharValue;
-import com.google.turbine.model.Const.ConstCastError;
-import com.google.turbine.model.Const.DoubleValue;
-import com.google.turbine.model.Const.FloatValue;
-import com.google.turbine.model.Const.StringValue;
-import com.google.turbine.model.Const.Value;
 import com.google.turbine.model.TurbineConstantTypeKind;
 import com.google.turbine.model.TurbineFlag;
 import com.google.turbine.model.TurbineTyKind;
@@ -70,7 +61,6 @@ import com.google.turbine.tree.Tree.Unary;
 import com.google.turbine.tree.TurbineOperatorKind;
 import com.google.turbine.type.AnnoInfo;
 import com.google.turbine.type.Type;
-import java.util.ArrayDeque;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -97,7 +87,7 @@ public class ConstEvaluator {
   private final SourceFile source;
 
   /** The constant variable environment. */
-  private final Env<FieldSymbol, Value> values;
+  private final Env<FieldSymbol, Const.Value> values;
 
   /** The class environment. */
   private final CompoundEnv<ClassSymbol, TypeBoundClass> env;
@@ -112,7 +102,7 @@ public class ConstEvaluator {
       MemberImportIndex memberImports,
       SourceFile source,
       Scope scope,
-      Env<FieldSymbol, Value> values,
+      Env<FieldSymbol, Const.Value> values,
       CompoundEnv<ClassSymbol, TypeBoundClass> env,
       TurbineLogWithSource log) {
 
@@ -128,51 +118,29 @@ public class ConstEvaluator {
 
   /** Evaluates the given expression's value. */
   public @Nullable Const eval(Tree t) {
-    switch (t.kind()) {
-      case LITERAL:
-        {
-          Value a = (Value) ((Tree.Literal) t).value();
-          if (a == null) {
-            return null;
-          }
-          switch (a.constantTypeKind()) {
-            case CHAR:
-            case INT:
-            case LONG:
-            case FLOAT:
-            case DOUBLE:
-            case BOOLEAN:
-            case STRING:
-              return a;
-            case SHORT:
-            case BYTE:
-            case NULL:
-          }
-          throw new AssertionError(a.constantTypeKind());
+    return switch (t.kind()) {
+      case LITERAL -> {
+        Const.Value a = (Const.Value) ((Tree.Literal) t).value();
+        if (a == null) {
+          yield null;
         }
-      case VOID_TY:
-        throw new AssertionError(t.kind());
-      case CONST_VAR_NAME:
-        return evalConstVar((ConstVarName) t);
-      case CLASS_LITERAL:
-        return evalClassLiteral((ClassLiteral) t);
-      case BINARY:
-        return evalBinary((Binary) t);
-      case PAREN:
-        return eval(((Paren) t).expr());
-      case TYPE_CAST:
-        return evalCast((TypeCast) t);
-      case UNARY:
-        return evalUnary((Unary) t);
-      case CONDITIONAL:
-        return evalConditional((Conditional) t);
-      case ARRAY_INIT:
-        return evalArrayInit((ArrayInit) t);
-      case ANNO_EXPR:
-        return evalAnno(((Tree.AnnoExpr) t).value());
-      default:
-        throw error(t.position(), ErrorKind.EXPRESSION_ERROR);
-    }
+        yield switch (a.constantTypeKind()) {
+          case CHAR, INT, LONG, FLOAT, DOUBLE, BOOLEAN, STRING -> a;
+          case SHORT, BYTE, NULL -> throw new AssertionError(a.constantTypeKind());
+        };
+      }
+      case VOID_TY -> throw new AssertionError(t.kind());
+      case CONST_VAR_NAME -> evalConstVar((ConstVarName) t);
+      case CLASS_LITERAL -> evalClassLiteral((ClassLiteral) t);
+      case BINARY -> evalBinary((Binary) t);
+      case PAREN -> eval(((Paren) t).expr());
+      case TYPE_CAST -> evalCast((TypeCast) t);
+      case UNARY -> evalUnary((Unary) t);
+      case CONDITIONAL -> evalConditional((Conditional) t);
+      case ARRAY_INIT -> evalArrayInit((ArrayInit) t);
+      case ANNO_EXPR -> evalAnno(((Tree.AnnoExpr) t).value());
+      default -> throw error(t.position(), ErrorKind.EXPRESSION_ERROR);
+    };
   }
 
   /** Evaluates a class literal. */
@@ -181,19 +149,14 @@ public class ConstEvaluator {
   }
 
   private Type evalClassLiteralType(Tree.Type type) {
-    switch (type.kind()) {
-      case PRIM_TY:
-        return Type.PrimTy.create(((PrimTy) type).tykind(), ImmutableList.of());
-      case VOID_TY:
-        return Type.VOID;
-      case CLASS_TY:
-        return resolveClass((ClassTy) type);
-      case ARR_TY:
-        return Type.ArrayTy.create(
-            evalClassLiteralType(((Tree.ArrTy) type).elem()), ImmutableList.of());
-      default:
-        throw new AssertionError(type.kind());
-    }
+    return switch (type.kind()) {
+      case PRIM_TY -> Type.PrimTy.create(((PrimTy) type).tykind(), ImmutableList.of());
+      case VOID_TY -> Type.VOID;
+      case CLASS_TY -> resolveClass((ClassTy) type);
+      case ARR_TY ->
+          Type.ArrayTy.create(evalClassLiteralType(((Tree.ArrTy) type).elem()), ImmutableList.of());
+      default -> throw new AssertionError(type.kind());
+    };
   }
 
   /**
@@ -206,17 +169,14 @@ public class ConstEvaluator {
    * isn't completed during the hierarchy phase).
    */
   private Type resolveClass(ClassTy classTy) {
-    ArrayDeque<Ident> flat = new ArrayDeque<>();
-    for (ClassTy curr = classTy; curr != null; curr = curr.base().orElse(null)) {
-      flat.addFirst(curr.name());
-    }
-    LookupResult result = scope.lookup(new LookupKey(ImmutableList.copyOf(flat)));
+    ImmutableList<Ident> flat = classTy.qualifiedName();
+    LookupResult result = scope.lookup(new LookupKey(flat));
     if (result == null) {
-      log.error(classTy.position(), ErrorKind.CANNOT_RESOLVE, flat.getFirst());
+      log.error(classTy.position(), ErrorKind.CANNOT_RESOLVE, flat.get(0));
       return Type.ErrorTy.create(flat, ImmutableList.of());
     }
     if (result.sym().symKind() != Symbol.Kind.CLASS) {
-      throw error(classTy.position(), ErrorKind.UNEXPECTED_TYPE_PARAMETER, flat.getFirst());
+      throw error(classTy.position(), ErrorKind.UNEXPECTED_TYPE_PARAMETER, flat.get(0));
     }
     ClassSymbol classSym = (ClassSymbol) result.sym();
     for (Ident bit : result.remaining()) {
@@ -249,7 +209,7 @@ public class ConstEvaluator {
     return values.get(field.sym());
   }
 
-  FieldInfo resolveField(ConstVarName t) {
+  @Nullable FieldInfo resolveField(ConstVarName t) {
     Ident simpleName = t.name().get(0);
     FieldInfo field = lexicalField(env, owner, simpleName);
     if (field != null) {
@@ -279,10 +239,8 @@ public class ConstEvaluator {
       }
       return field;
     }
-    throw error(
-        t.position(),
-        ErrorKind.CANNOT_RESOLVE,
-        String.format("field %s", Iterables.getLast(t.name())));
+    log.error(t.position(), ErrorKind.CANNOT_RESOLVE_FIELD, t.name().get(t.name().size() - 1));
+    return null;
   }
 
   private @Nullable FieldInfo resolveQualifiedField(ConstVarName t) {
@@ -304,7 +262,8 @@ public class ConstEvaluator {
         return null;
       }
     }
-    return Resolve.resolveField(env, origin, sym, Iterables.getLast(result.remaining()));
+    return Resolve.resolveField(
+        env, origin, sym, result.remaining().get(result.remaining().size() - 1));
   }
 
   /** Search for constant variables in lexically enclosing scopes. */
@@ -324,309 +283,198 @@ public class ConstEvaluator {
   /** Casts the value to the given type. */
   private Const cast(int position, Type ty, Const value) {
     checkNotNull(value);
-    switch (ty.tyKind()) {
-      case CLASS_TY:
-      case TY_VAR:
-        return value;
-      case PRIM_TY:
+    return switch (ty.tyKind()) {
+      case CLASS_TY, TY_VAR -> value;
+      case PRIM_TY -> {
         if (!value.kind().equals(Const.Kind.PRIMITIVE)) {
           throw error(position, ErrorKind.EXPRESSION_ERROR);
         }
-        return coerce(position, (Value) value, ((Type.PrimTy) ty).primkind());
-      default:
-        throw new AssertionError(ty.tyKind());
-    }
+        yield coerce(position, (Const.Value) value, ((Type.PrimTy) ty).primkind());
+      }
+      default -> throw new AssertionError(ty.tyKind());
+    };
   }
 
   /** Casts the constant value to the given type. */
-  Value coerce(int position, Value value, TurbineConstantTypeKind kind) {
-    switch (kind) {
-      case BYTE:
-        return asByte(position, value);
-      case SHORT:
-        return asShort(position, value);
-      case INT:
-        return asInt(position, value);
-      case LONG:
-        return asLong(position, value);
-      case FLOAT:
-        return asFloat(position, value);
-      case DOUBLE:
-        return asDouble(position, value);
-      case CHAR:
-        return asChar(position, value);
-      case BOOLEAN:
-      case STRING:
-      case NULL:
+  Const.Value coerce(int position, Const.Value value, TurbineConstantTypeKind kind) {
+    return switch (kind) {
+      case BYTE -> asByte(position, value);
+      case SHORT -> asShort(position, value);
+      case INT -> asInt(position, value);
+      case LONG -> asLong(position, value);
+      case FLOAT -> asFloat(position, value);
+      case DOUBLE -> asDouble(position, value);
+      case CHAR -> asChar(position, value);
+      case BOOLEAN, STRING, NULL -> {
         if (!value.constantTypeKind().equals(kind)) {
           throw typeError(position, value, kind);
         }
-        return value;
-    }
-    throw new AssertionError(kind);
+        yield value;
+      }
+    };
   }
 
-  private Const.BooleanValue asBoolean(int position, Value value) {
+  private Const.BooleanValue asBoolean(int position, Const.Value value) {
     if (!value.constantTypeKind().equals(TurbineConstantTypeKind.BOOLEAN)) {
       throw typeError(position, value, TurbineConstantTypeKind.BOOLEAN);
     }
     return (Const.BooleanValue) value;
   }
 
-  private Const.StringValue asString(int position, Value value) {
+  private Const.StringValue asString(int position, Const.Value value) {
     if (!value.constantTypeKind().equals(TurbineConstantTypeKind.STRING)) {
       throw typeError(position, value, TurbineConstantTypeKind.STRING);
     }
     return (Const.StringValue) value;
   }
 
-  private Const.StringValue toString(int position, Value value) {
+  private Const.StringValue toString(int position, Const.Value value) {
     String result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = String.valueOf(((Const.CharValue) value).value());
-        break;
-      case SHORT:
-        result = String.valueOf(((Const.ShortValue) value).value());
-        break;
-      case INT:
-        result = String.valueOf(((Const.IntValue) value).value());
-        break;
-      case LONG:
-        result = String.valueOf(((Const.LongValue) value).value());
-        break;
-      case FLOAT:
-        result = String.valueOf(((Const.FloatValue) value).value());
-        break;
-      case DOUBLE:
-        result = String.valueOf(((Const.DoubleValue) value).value());
-        break;
-      case BOOLEAN:
-        result = String.valueOf(((Const.BooleanValue) value).value());
-        break;
-      case BYTE:
-        result = String.valueOf(((Const.ByteValue) value).value());
-        break;
-      case STRING:
-        return (StringValue) value;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.STRING);
+      case CHAR -> result = String.valueOf(((Const.CharValue) value).value());
+      case SHORT -> result = String.valueOf(((Const.ShortValue) value).value());
+      case INT -> result = String.valueOf(((Const.IntValue) value).value());
+      case LONG -> result = String.valueOf(((Const.LongValue) value).value());
+      case FLOAT -> result = String.valueOf(((Const.FloatValue) value).value());
+      case DOUBLE -> result = String.valueOf(((Const.DoubleValue) value).value());
+      case BOOLEAN -> result = String.valueOf(((Const.BooleanValue) value).value());
+      case BYTE -> result = String.valueOf(((Const.ByteValue) value).value());
+      case STRING -> {
+        return (Const.StringValue) value;
+      }
+      default -> throw typeError(position, value, TurbineConstantTypeKind.STRING);
     }
     return new Const.StringValue(result);
   }
 
-  private Const.CharValue asChar(int position, Value value) {
+  private Const.CharValue asChar(int position, Const.Value value) {
     char result;
     switch (value.constantTypeKind()) {
-      case CHAR:
+      case CHAR -> {
         return (Const.CharValue) value;
-      case BYTE:
-        result = (char) ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
-        result = (char) ((Const.ShortValue) value).value();
-        break;
-      case INT:
-        result = (char) ((Const.IntValue) value).value();
-        break;
-      case LONG:
-        result = (char) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        result = (char) ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        result = (char) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.CHAR);
+      }
+      case BYTE -> result = (char) ((Const.ByteValue) value).value();
+      case SHORT -> result = (char) ((Const.ShortValue) value).value();
+      case INT -> result = (char) ((Const.IntValue) value).value();
+      case LONG -> result = (char) ((Const.LongValue) value).value();
+      case FLOAT -> result = (char) ((Const.FloatValue) value).value();
+      case DOUBLE -> result = (char) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.CHAR);
     }
     return new Const.CharValue(result);
   }
 
-  private Const.ByteValue asByte(int position, Value value) {
+  private Const.ByteValue asByte(int position, Const.Value value) {
     byte result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = (byte) ((Const.CharValue) value).value();
-        break;
-      case BYTE:
+      case CHAR -> result = (byte) ((Const.CharValue) value).value();
+      case BYTE -> {
         return (Const.ByteValue) value;
-      case SHORT:
-        result = (byte) ((Const.ShortValue) value).value();
-        break;
-      case INT:
-        result = (byte) ((Const.IntValue) value).value();
-        break;
-      case LONG:
-        result = (byte) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        result = (byte) ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        result = (byte) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.BYTE);
+      }
+      case SHORT -> result = (byte) ((Const.ShortValue) value).value();
+      case INT -> result = (byte) ((Const.IntValue) value).value();
+      case LONG -> result = (byte) ((Const.LongValue) value).value();
+      case FLOAT -> result = (byte) ((Const.FloatValue) value).value();
+      case DOUBLE -> result = (byte) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.BYTE);
     }
     return new Const.ByteValue(result);
   }
 
-  private Const.ShortValue asShort(int position, Value value) {
+  private Const.ShortValue asShort(int position, Const.Value value) {
     short result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = (short) ((Const.CharValue) value).value();
-        break;
-      case BYTE:
-        result = ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
+      case CHAR -> result = (short) ((Const.CharValue) value).value();
+      case BYTE -> result = ((Const.ByteValue) value).value();
+      case SHORT -> {
         return (Const.ShortValue) value;
-      case INT:
-        result = (short) ((Const.IntValue) value).value();
-        break;
-      case LONG:
-        result = (short) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        result = (short) ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        result = (short) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.SHORT);
+      }
+      case INT -> result = (short) ((Const.IntValue) value).value();
+      case LONG -> result = (short) ((Const.LongValue) value).value();
+      case FLOAT -> result = (short) ((Const.FloatValue) value).value();
+      case DOUBLE -> result = (short) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.SHORT);
     }
     return new Const.ShortValue(result);
   }
 
-  private Const.IntValue asInt(int position, Value value) {
+  private Const.IntValue asInt(int position, Const.Value value) {
     int result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = ((CharValue) value).value();
-        break;
-      case BYTE:
-        result = ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
-        result = ((Const.ShortValue) value).value();
-        break;
-      case INT:
+      case CHAR -> result = ((Const.CharValue) value).value();
+      case BYTE -> result = ((Const.ByteValue) value).value();
+      case SHORT -> result = ((Const.ShortValue) value).value();
+      case INT -> {
         return (Const.IntValue) value;
-      case LONG:
-        result = (int) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        result = (int) ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        result = (int) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.INT);
+      }
+      case LONG -> result = (int) ((Const.LongValue) value).value();
+      case FLOAT -> result = (int) ((Const.FloatValue) value).value();
+      case DOUBLE -> result = (int) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.INT);
     }
     return new Const.IntValue(result);
   }
 
-  private Const.LongValue asLong(int position, Value value) {
+  private Const.LongValue asLong(int position, Const.Value value) {
     long result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = ((CharValue) value).value();
-        break;
-      case BYTE:
-        result = ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
-        result = ((Const.ShortValue) value).value();
-        break;
-      case INT:
-        result = ((Const.IntValue) value).value();
-        break;
-      case LONG:
+      case CHAR -> result = ((Const.CharValue) value).value();
+      case BYTE -> result = ((Const.ByteValue) value).value();
+      case SHORT -> result = ((Const.ShortValue) value).value();
+      case INT -> result = ((Const.IntValue) value).value();
+      case LONG -> {
         return (Const.LongValue) value;
-      case FLOAT:
-        result = (long) ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        result = (long) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.LONG);
+      }
+      case FLOAT -> result = (long) ((Const.FloatValue) value).value();
+      case DOUBLE -> result = (long) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.LONG);
     }
     return new Const.LongValue(result);
   }
 
-  private Const.FloatValue asFloat(int position, Value value) {
+  private Const.FloatValue asFloat(int position, Const.Value value) {
     float result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = ((CharValue) value).value();
-        break;
-      case BYTE:
-        result = ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
-        result = ((Const.ShortValue) value).value();
-        break;
-      case INT:
-        result = (float) ((Const.IntValue) value).value();
-        break;
-      case LONG:
-        result = (float) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        return (FloatValue) value;
-      case DOUBLE:
-        result = (float) ((Const.DoubleValue) value).value();
-        break;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.FLOAT);
+      case CHAR -> result = ((Const.CharValue) value).value();
+      case BYTE -> result = ((Const.ByteValue) value).value();
+      case SHORT -> result = ((Const.ShortValue) value).value();
+      case INT -> result = (float) ((Const.IntValue) value).value();
+      case LONG -> result = (float) ((Const.LongValue) value).value();
+      case FLOAT -> {
+        return (Const.FloatValue) value;
+      }
+      case DOUBLE -> result = (float) ((Const.DoubleValue) value).value();
+      default -> throw typeError(position, value, TurbineConstantTypeKind.FLOAT);
     }
     return new Const.FloatValue(result);
   }
 
-  private Const.DoubleValue asDouble(int position, Value value) {
+  private Const.DoubleValue asDouble(int position, Const.Value value) {
     double result;
     switch (value.constantTypeKind()) {
-      case CHAR:
-        result = ((CharValue) value).value();
-        break;
-      case BYTE:
-        result = ((Const.ByteValue) value).value();
-        break;
-      case SHORT:
-        result = ((Const.ShortValue) value).value();
-        break;
-      case INT:
-        result = ((Const.IntValue) value).value();
-        break;
-      case LONG:
-        result = (double) ((Const.LongValue) value).value();
-        break;
-      case FLOAT:
-        result = ((Const.FloatValue) value).value();
-        break;
-      case DOUBLE:
-        return (DoubleValue) value;
-      default:
-        throw typeError(position, value, TurbineConstantTypeKind.DOUBLE);
+      case CHAR -> result = ((Const.CharValue) value).value();
+      case BYTE -> result = ((Const.ByteValue) value).value();
+      case SHORT -> result = ((Const.ShortValue) value).value();
+      case INT -> result = ((Const.IntValue) value).value();
+      case LONG -> result = (double) ((Const.LongValue) value).value();
+      case FLOAT -> result = ((Const.FloatValue) value).value();
+      case DOUBLE -> {
+        return (Const.DoubleValue) value;
+      }
+      default -> throw typeError(position, value, TurbineConstantTypeKind.DOUBLE);
     }
     return new Const.DoubleValue(result);
   }
 
-  private @Nullable Value evalValue(Expression tree) {
+  private Const.@Nullable Value evalValue(Expression tree) {
     Const result = eval(tree);
     // TODO(cushon): consider distinguishing between constant field and annotation values,
     // and only allowing class literals / enum constants in the latter
-    return (result instanceof Value) ? (Value) result : null;
+    return (result instanceof Const.Value value) ? value : null;
   }
 
-  private @Nullable Value evalConditional(Conditional t) {
-    Value condition = evalValue(t.cond());
+  private Const.@Nullable Value evalConditional(Conditional t) {
+    Const.Value condition = evalValue(t.cond());
     if (condition == null) {
       return null;
     }
@@ -635,102 +483,81 @@ public class ConstEvaluator {
         : evalValue(t.iffalse());
   }
 
-  private @Nullable Value evalUnary(Unary t) {
-    Value expr = evalValue(t.expr());
+  private Const.@Nullable Value evalUnary(Unary t) {
+    Const.Value expr = evalValue(t.expr());
     if (expr == null) {
       return null;
     }
-    switch (t.op()) {
-      case NOT:
-        return unaryNegate(t.position(), expr);
-      case BITWISE_COMP:
-        return bitwiseComp(t.position(), expr);
-      case UNARY_PLUS:
-        return unaryPlus(t.position(), expr);
-      case NEG:
-        return unaryMinus(t.position(), expr);
-      default:
-        throw new AssertionError(t.op());
-    }
+    return switch (t.op()) {
+      case NOT -> unaryNegate(t.position(), expr);
+      case BITWISE_COMP -> bitwiseComp(t.position(), expr);
+      case UNARY_PLUS -> unaryPlus(t.position(), expr);
+      case NEG -> unaryMinus(t.position(), expr);
+      default -> throw new AssertionError(t.op());
+    };
   }
 
-  private @Nullable Value unaryNegate(int position, Value expr) {
-    switch (expr.constantTypeKind()) {
-      case BOOLEAN:
-        return new Const.BooleanValue(!asBoolean(position, expr).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
-    }
+  private Const.@Nullable Value unaryNegate(int position, Const.Value expr) {
+    return switch (expr.constantTypeKind()) {
+      case BOOLEAN -> new Const.BooleanValue(!asBoolean(position, expr).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
+    };
   }
 
-  private @Nullable Value bitwiseComp(int position, Value expr) {
+  private Const.@Nullable Value bitwiseComp(int position, Const.Value expr) {
     expr = promoteUnary(position, expr);
-    switch (expr.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(~asInt(position, expr).value());
-      case LONG:
-        return new Const.LongValue(~asLong(position, expr).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
-    }
+    return switch (expr.constantTypeKind()) {
+      case INT -> new Const.IntValue(~asInt(position, expr).value());
+      case LONG -> new Const.LongValue(~asLong(position, expr).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
+    };
   }
 
-  private @Nullable Value unaryPlus(int position, Value expr) {
+  private Const.@Nullable Value unaryPlus(int position, Const.Value expr) {
     expr = promoteUnary(position, expr);
-    switch (expr.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(+asInt(position, expr).value());
-      case LONG:
-        return new Const.LongValue(+asLong(position, expr).value());
-      case FLOAT:
-        return new Const.FloatValue(+asFloat(position, expr).value());
-      case DOUBLE:
-        return new Const.DoubleValue(+asDouble(position, expr).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
-    }
+    return switch (expr.constantTypeKind()) {
+      case INT -> new Const.IntValue(+asInt(position, expr).value());
+      case LONG -> new Const.LongValue(+asLong(position, expr).value());
+      case FLOAT -> new Const.FloatValue(+asFloat(position, expr).value());
+      case DOUBLE -> new Const.DoubleValue(+asDouble(position, expr).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
+    };
   }
 
-  private @Nullable Value unaryMinus(int position, Value expr) {
+  private Const.@Nullable Value unaryMinus(int position, Const.Value expr) {
     expr = promoteUnary(position, expr);
-    switch (expr.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(-asInt(position, expr).value());
-      case LONG:
-        return new Const.LongValue(-asLong(position, expr).value());
-      case FLOAT:
-        return new Const.FloatValue(-asFloat(position, expr).value());
-      case DOUBLE:
-        return new Const.DoubleValue(-asDouble(position, expr).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
-    }
+    return switch (expr.constantTypeKind()) {
+      case INT -> new Const.IntValue(-asInt(position, expr).value());
+      case LONG -> new Const.LongValue(-asLong(position, expr).value());
+      case FLOAT -> new Const.FloatValue(-asFloat(position, expr).value());
+      case DOUBLE -> new Const.DoubleValue(-asDouble(position, expr).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, expr.constantTypeKind());
+    };
   }
 
-  private @Nullable Value evalCast(TypeCast t) {
-    Value expr = evalValue(t.expr());
+  private Const.@Nullable Value evalCast(TypeCast t) {
+    Const.Value expr = evalValue(t.expr());
     if (expr == null) {
       return null;
     }
     switch (t.ty().kind()) {
-      case PRIM_TY:
+      case PRIM_TY -> {
         return coerce(t.expr().position(), expr, ((Tree.PrimTy) t.ty()).tykind());
-      case CLASS_TY:
-        {
-          ClassTy classTy = (ClassTy) t.ty();
-          // TODO(cushon): check package?
-          if (!classTy.name().value().equals("String")) {
-            // Explicit boxing cases (e.g. `(Boolean) false`) are legal, but not const exprs.
-            return null;
-          }
-          return toString(t.expr().position(), expr);
+      }
+      case CLASS_TY -> {
+        ClassTy classTy = (ClassTy) t.ty();
+        // TODO(cushon): check package?
+        if (!classTy.name().value().equals("String")) {
+          // Explicit boxing cases (e.g. `(Boolean) false`) are legal, but not const exprs.
+          return null;
         }
-      default:
-        throw new AssertionError(t.ty().kind());
+        return toString(t.expr().position(), expr);
+      }
+      default -> throw new AssertionError(t.ty().kind());
     }
   }
 
-  private @Nullable Value add(int position, Value a, Value b) {
+  private Const.@Nullable Value add(int position, Const.Value a, Const.Value b) {
     if (a.constantTypeKind() == TurbineConstantTypeKind.STRING
         || b.constantTypeKind() == TurbineConstantTypeKind.STRING) {
       return new Const.StringValue(toString(position, a).value() + toString(position, b).value());
@@ -738,343 +565,304 @@ public class ConstEvaluator {
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() + asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() + asLong(position, b).value());
-      case FLOAT:
-        return new Const.FloatValue(asFloat(position, a).value() + asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.DoubleValue(asDouble(position, a).value() + asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() + asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() + asLong(position, b).value());
+      case FLOAT ->
+          new Const.FloatValue(asFloat(position, a).value() + asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.DoubleValue(asDouble(position, a).value() + asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value subtract(int position, Value a, Value b) {
+  private Const.@Nullable Value subtract(int position, Const.Value a, Const.Value b) {
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() - asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() - asLong(position, b).value());
-      case FLOAT:
-        return new Const.FloatValue(asFloat(position, a).value() - asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.DoubleValue(asDouble(position, a).value() - asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() - asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() - asLong(position, b).value());
+      case FLOAT ->
+          new Const.FloatValue(asFloat(position, a).value() - asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.DoubleValue(asDouble(position, a).value() - asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value mult(int position, Value a, Value b) {
+  private Const.@Nullable Value mult(int position, Const.Value a, Const.Value b) {
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() * asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() * asLong(position, b).value());
-      case FLOAT:
-        return new Const.FloatValue(asFloat(position, a).value() * asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.DoubleValue(asDouble(position, a).value() * asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() * asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() * asLong(position, b).value());
+      case FLOAT ->
+          new Const.FloatValue(asFloat(position, a).value() * asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.DoubleValue(asDouble(position, a).value() * asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value divide(int position, Value a, Value b) {
+  private Const.@Nullable Value divide(int position, Const.Value a, Const.Value b) {
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() / asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() / asLong(position, b).value());
-      case FLOAT:
-        return new Const.FloatValue(asFloat(position, a).value() / asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.DoubleValue(asDouble(position, a).value() / asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() / asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() / asLong(position, b).value());
+      case FLOAT ->
+          new Const.FloatValue(asFloat(position, a).value() / asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.DoubleValue(asDouble(position, a).value() / asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value mod(int position, Value a, Value b) {
+  private Const.@Nullable Value mod(int position, Const.Value a, Const.Value b) {
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() % asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() % asLong(position, b).value());
-      case FLOAT:
-        return new Const.FloatValue(asFloat(position, a).value() % asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.DoubleValue(asDouble(position, a).value() % asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() % asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() % asLong(position, b).value());
+      case FLOAT ->
+          new Const.FloatValue(asFloat(position, a).value() % asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.DoubleValue(asDouble(position, a).value() % asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
   private static final int INT_SHIFT_MASK = 0b11111;
 
   private static final int LONG_SHIFT_MASK = 0b111111;
 
-  private @Nullable Value shiftLeft(int position, Value a, Value b) {
+  private Const.@Nullable Value shiftLeft(int position, Const.Value a, Const.Value b) {
     a = promoteUnary(position, a);
     b = promoteUnary(position, b);
-    switch (a.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(
-            asInt(position, a).value() << (asInt(position, b).value() & INT_SHIFT_MASK));
-      case LONG:
-        return new Const.LongValue(
-            asLong(position, a).value() << (asInt(position, b).value() & LONG_SHIFT_MASK));
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
-    }
+    return switch (a.constantTypeKind()) {
+      case INT ->
+          new Const.IntValue(
+              asInt(position, a).value() << (asInt(position, b).value() & INT_SHIFT_MASK));
+      case LONG ->
+          new Const.LongValue(
+              asLong(position, a).value() << (asInt(position, b).value() & LONG_SHIFT_MASK));
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
+    };
   }
 
-  private @Nullable Value shiftRight(int position, Value a, Value b) {
+  private Const.@Nullable Value shiftRight(int position, Const.Value a, Const.Value b) {
     a = promoteUnary(position, a);
     b = promoteUnary(position, b);
-    switch (a.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(
-            asInt(position, a).value() >> (asInt(position, b).value() & INT_SHIFT_MASK));
-      case LONG:
-        return new Const.LongValue(
-            asLong(position, a).value() >> (asInt(position, b).value() & LONG_SHIFT_MASK));
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
-    }
+    return switch (a.constantTypeKind()) {
+      case INT ->
+          new Const.IntValue(
+              asInt(position, a).value() >> (asInt(position, b).value() & INT_SHIFT_MASK));
+      case LONG ->
+          new Const.LongValue(
+              asLong(position, a).value() >> (asInt(position, b).value() & LONG_SHIFT_MASK));
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
+    };
   }
 
-  private @Nullable Value unsignedShiftRight(int position, Value a, Value b) {
+  private Const.@Nullable Value unsignedShiftRight(int position, Const.Value a, Const.Value b) {
     a = promoteUnary(position, a);
     b = promoteUnary(position, b);
+    return switch (a.constantTypeKind()) {
+      case INT ->
+          new Const.IntValue(
+              asInt(position, a).value() >>> (asInt(position, b).value() & INT_SHIFT_MASK));
+      case LONG ->
+          new Const.LongValue(
+              asLong(position, a).value() >>> (asInt(position, b).value() & LONG_SHIFT_MASK));
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
+    };
+  }
+
+  private Const.@Nullable Value lessThan(int position, Const.Value a, Const.Value b) {
+    TurbineConstantTypeKind type = promoteBinary(position, a, b);
+    a = coerce(position, a, type);
+    b = coerce(position, b, type);
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() < asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() < asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() < asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() < asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
+  }
+
+  private Const.@Nullable Value lessThanEqual(int position, Const.Value a, Const.Value b) {
+    TurbineConstantTypeKind type = promoteBinary(position, a, b);
+    a = coerce(position, a, type);
+    b = coerce(position, b, type);
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() <= asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() <= asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() <= asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() <= asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
+  }
+
+  private Const.@Nullable Value greaterThan(int position, Const.Value a, Const.Value b) {
+    TurbineConstantTypeKind type = promoteBinary(position, a, b);
+    a = coerce(position, a, type);
+    b = coerce(position, b, type);
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() > asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() > asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() > asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() > asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
+  }
+
+  private Const.@Nullable Value greaterThanEqual(int position, Const.Value a, Const.Value b) {
+    TurbineConstantTypeKind type = promoteBinary(position, a, b);
+    a = coerce(position, a, type);
+    b = coerce(position, b, type);
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() >= asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() >= asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() >= asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() >= asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
+  }
+
+  private Const.@Nullable Value equal(int position, Const.Value a, Const.Value b) {
     switch (a.constantTypeKind()) {
-      case INT:
-        return new Const.IntValue(
-            asInt(position, a).value() >>> (asInt(position, b).value() & INT_SHIFT_MASK));
-      case LONG:
-        return new Const.LongValue(
-            asLong(position, a).value() >>> (asInt(position, b).value() & LONG_SHIFT_MASK));
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
-    }
-  }
-
-  private @Nullable Value lessThan(int position, Value a, Value b) {
-    TurbineConstantTypeKind type = promoteBinary(position, a, b);
-    a = coerce(position, a, type);
-    b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() < asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() < asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() < asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() < asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
-  }
-
-  private @Nullable Value lessThanEqual(int position, Value a, Value b) {
-    TurbineConstantTypeKind type = promoteBinary(position, a, b);
-    a = coerce(position, a, type);
-    b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() <= asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() <= asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() <= asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() <= asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
-  }
-
-  private @Nullable Value greaterThan(int position, Value a, Value b) {
-    TurbineConstantTypeKind type = promoteBinary(position, a, b);
-    a = coerce(position, a, type);
-    b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() > asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() > asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() > asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() > asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
-  }
-
-  private @Nullable Value greaterThanEqual(int position, Value a, Value b) {
-    TurbineConstantTypeKind type = promoteBinary(position, a, b);
-    a = coerce(position, a, type);
-    b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() >= asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() >= asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() >= asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() >= asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
-  }
-
-  private @Nullable Value equal(int position, Value a, Value b) {
-    switch (a.constantTypeKind()) {
-      case STRING:
+      case STRING -> {
         return new Const.BooleanValue(
             asString(position, a).value().equals(asString(position, b).value()));
-      case BOOLEAN:
+      }
+      case BOOLEAN -> {
         return new Const.BooleanValue(
             asBoolean(position, a).value() == asBoolean(position, b).value());
-      default:
-        break;
+      }
+      default -> {}
     }
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() == asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() == asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() == asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() == asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() == asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() == asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() == asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() == asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value notEqual(int position, Value a, Value b) {
+  private Const.@Nullable Value notEqual(int position, Const.Value a, Const.Value b) {
     switch (a.constantTypeKind()) {
-      case STRING:
+      case STRING -> {
         return new Const.BooleanValue(
             !asString(position, a).value().equals(asString(position, b).value()));
-      case BOOLEAN:
+      }
+      case BOOLEAN -> {
         return new Const.BooleanValue(
             asBoolean(position, a).value() != asBoolean(position, b).value());
-      default:
-        break;
+      }
+      default -> {}
     }
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.BooleanValue(asInt(position, a).value() != asInt(position, b).value());
-      case LONG:
-        return new Const.BooleanValue(asLong(position, a).value() != asLong(position, b).value());
-      case FLOAT:
-        return new Const.BooleanValue(asFloat(position, a).value() != asFloat(position, b).value());
-      case DOUBLE:
-        return new Const.BooleanValue(
-            asDouble(position, a).value() != asDouble(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.BooleanValue(asInt(position, a).value() != asInt(position, b).value());
+      case LONG ->
+          new Const.BooleanValue(asLong(position, a).value() != asLong(position, b).value());
+      case FLOAT ->
+          new Const.BooleanValue(asFloat(position, a).value() != asFloat(position, b).value());
+      case DOUBLE ->
+          new Const.BooleanValue(asDouble(position, a).value() != asDouble(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private Value bitwiseAnd(int position, Value a, Value b) {
+  private Const.Value bitwiseAnd(int position, Const.Value a, Const.Value b) {
     switch (a.constantTypeKind()) {
-      case BOOLEAN:
+      case BOOLEAN -> {
+        // We're evaluating constants and aren't required to report errors, so using
+        // short-circuiting operators is faster and not answer changing.
         return new Const.BooleanValue(
-            asBoolean(position, a).value() & asBoolean(position, b).value());
-      default:
-        break;
+            asBoolean(position, a).value() && asBoolean(position, b).value());
+      }
+      default -> {}
     }
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() & asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() & asLong(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() & asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() & asLong(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private Value bitwiseOr(int position, Value a, Value b) {
+  private Const.Value bitwiseOr(int position, Const.Value a, Const.Value b) {
     switch (a.constantTypeKind()) {
-      case BOOLEAN:
+      case BOOLEAN -> {
+        // We're evaluating constants and aren't required to report errors, so using
+        // short-circuiting operators is faster and not answer changing.
         return new Const.BooleanValue(
-            asBoolean(position, a).value() | asBoolean(position, b).value());
-      default:
-        break;
+            asBoolean(position, a).value() || asBoolean(position, b).value());
+      }
+      default -> {}
     }
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() | asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() | asLong(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() | asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() | asLong(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value bitwiseXor(int position, Value a, Value b) {
+  private Const.@Nullable Value bitwiseXor(int position, Const.Value a, Const.Value b) {
     switch (a.constantTypeKind()) {
-      case BOOLEAN:
+      case BOOLEAN -> {
         return new Const.BooleanValue(
             asBoolean(position, a).value() ^ asBoolean(position, b).value());
-      default:
-        break;
+      }
+      default -> {}
     }
     TurbineConstantTypeKind type = promoteBinary(position, a, b);
     a = coerce(position, a, type);
     b = coerce(position, b, type);
-    switch (type) {
-      case INT:
-        return new Const.IntValue(asInt(position, a).value() ^ asInt(position, b).value());
-      case LONG:
-        return new Const.LongValue(asLong(position, a).value() ^ asLong(position, b).value());
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, type);
-    }
+    return switch (type) {
+      case INT -> new Const.IntValue(asInt(position, a).value() ^ asInt(position, b).value());
+      case LONG -> new Const.LongValue(asLong(position, a).value() ^ asLong(position, b).value());
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, type);
+    };
   }
 
-  private @Nullable Value evalBinary(Binary t) {
-    Value result = null;
+  private Const.@Nullable Value evalBinary(Binary t) {
+    Const.Value result = null;
     boolean first = true;
     for (Expression child : t.children()) {
-      Value value = evalValue(child);
+      Const.Value value = evalValue(child);
       if (value == null) {
         return null;
       }
@@ -1088,118 +876,72 @@ public class ConstEvaluator {
     return result;
   }
 
-  private @Nullable Value evalBinary(int position, TurbineOperatorKind op, Value lhs, Value rhs) {
-    switch (op) {
-      case PLUS:
-        return add(position, lhs, rhs);
-      case MINUS:
-        return subtract(position, lhs, rhs);
-      case MULT:
-        return mult(position, lhs, rhs);
-      case DIVIDE:
-        return divide(position, lhs, rhs);
-      case MODULO:
-        return mod(position, lhs, rhs);
-      case SHIFT_LEFT:
-        return shiftLeft(position, lhs, rhs);
-      case SHIFT_RIGHT:
-        return shiftRight(position, lhs, rhs);
-      case UNSIGNED_SHIFT_RIGHT:
-        return unsignedShiftRight(position, lhs, rhs);
-      case LESS_THAN:
-        return lessThan(position, lhs, rhs);
-      case GREATER_THAN:
-        return greaterThan(position, lhs, rhs);
-      case LESS_THAN_EQ:
-        return lessThanEqual(position, lhs, rhs);
-      case GREATER_THAN_EQ:
-        return greaterThanEqual(position, lhs, rhs);
-      case EQUAL:
-        return equal(position, lhs, rhs);
-      case NOT_EQUAL:
-        return notEqual(position, lhs, rhs);
-      case AND:
-        return new Const.BooleanValue(
-            asBoolean(position, lhs).value() && asBoolean(position, rhs).value());
-      case OR:
-        return new Const.BooleanValue(
-            asBoolean(position, lhs).value() || asBoolean(position, rhs).value());
-      case BITWISE_AND:
-        return bitwiseAnd(position, lhs, rhs);
-      case BITWISE_XOR:
-        return bitwiseXor(position, lhs, rhs);
-      case BITWISE_OR:
-        return bitwiseOr(position, lhs, rhs);
-      default:
-        throw new AssertionError(op);
-    }
+  private Const.@Nullable Value evalBinary(
+      int position, TurbineOperatorKind op, Const.Value lhs, Const.Value rhs) {
+    return switch (op) {
+      case PLUS -> add(position, lhs, rhs);
+      case MINUS -> subtract(position, lhs, rhs);
+      case MULT -> mult(position, lhs, rhs);
+      case DIVIDE -> divide(position, lhs, rhs);
+      case MODULO -> mod(position, lhs, rhs);
+      case SHIFT_LEFT -> shiftLeft(position, lhs, rhs);
+      case SHIFT_RIGHT -> shiftRight(position, lhs, rhs);
+      case UNSIGNED_SHIFT_RIGHT -> unsignedShiftRight(position, lhs, rhs);
+      case LESS_THAN -> lessThan(position, lhs, rhs);
+      case GREATER_THAN -> greaterThan(position, lhs, rhs);
+      case LESS_THAN_EQ -> lessThanEqual(position, lhs, rhs);
+      case GREATER_THAN_EQ -> greaterThanEqual(position, lhs, rhs);
+      case EQUAL -> equal(position, lhs, rhs);
+      case NOT_EQUAL -> notEqual(position, lhs, rhs);
+      case AND ->
+          new Const.BooleanValue(
+              asBoolean(position, lhs).value() && asBoolean(position, rhs).value());
+      case OR ->
+          new Const.BooleanValue(
+              asBoolean(position, lhs).value() || asBoolean(position, rhs).value());
+      case BITWISE_AND -> bitwiseAnd(position, lhs, rhs);
+      case BITWISE_XOR -> bitwiseXor(position, lhs, rhs);
+      case BITWISE_OR -> bitwiseOr(position, lhs, rhs);
+      default -> throw new AssertionError(op);
+    };
   }
 
-  private Value promoteUnary(int position, Value v) {
-    switch (v.constantTypeKind()) {
-      case CHAR:
-      case SHORT:
-      case BYTE:
-        return asInt(position, v);
-      case INT:
-      case LONG:
-      case FLOAT:
-      case DOUBLE:
-        return v;
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, v.constantTypeKind());
-    }
+  private Const.Value promoteUnary(int position, Const.Value v) {
+    return switch (v.constantTypeKind()) {
+      case CHAR, SHORT, BYTE -> asInt(position, v);
+      case INT, LONG, FLOAT, DOUBLE -> v;
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, v.constantTypeKind());
+    };
   }
 
-  private TurbineConstantTypeKind promoteBinary(int position, Value a, Value b) {
+  private TurbineConstantTypeKind promoteBinary(int position, Const.Value a, Const.Value b) {
     a = promoteUnary(position, a);
     b = promoteUnary(position, b);
-    switch (a.constantTypeKind()) {
-      case INT:
-        switch (b.constantTypeKind()) {
-          case INT:
-          case LONG:
-          case DOUBLE:
-          case FLOAT:
-            return b.constantTypeKind();
-          default:
-            throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
-        }
-      case LONG:
-        switch (b.constantTypeKind()) {
-          case INT:
-            return TurbineConstantTypeKind.LONG;
-          case LONG:
-          case DOUBLE:
-          case FLOAT:
-            return b.constantTypeKind();
-          default:
-            throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
-        }
-      case FLOAT:
-        switch (b.constantTypeKind()) {
-          case INT:
-          case LONG:
-          case FLOAT:
-            return TurbineConstantTypeKind.FLOAT;
-          case DOUBLE:
-            return TurbineConstantTypeKind.DOUBLE;
-          default:
-            throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
-        }
-      case DOUBLE:
-        switch (b.constantTypeKind()) {
-          case INT:
-          case LONG:
-          case FLOAT:
-          case DOUBLE:
-            return TurbineConstantTypeKind.DOUBLE;
-          default:
-            throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
-        }
-      default:
-        throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
-    }
+    return switch (a.constantTypeKind()) {
+      case INT ->
+          switch (b.constantTypeKind()) {
+            case INT, LONG, DOUBLE, FLOAT -> b.constantTypeKind();
+            default -> throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
+          };
+      case LONG ->
+          switch (b.constantTypeKind()) {
+            case INT -> TurbineConstantTypeKind.LONG;
+            case LONG, DOUBLE, FLOAT -> b.constantTypeKind();
+            default -> throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
+          };
+      case FLOAT ->
+          switch (b.constantTypeKind()) {
+            case INT, LONG, FLOAT -> TurbineConstantTypeKind.FLOAT;
+            case DOUBLE -> TurbineConstantTypeKind.DOUBLE;
+            default -> throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
+          };
+      case DOUBLE ->
+          switch (b.constantTypeKind()) {
+            case INT, LONG, FLOAT, DOUBLE -> TurbineConstantTypeKind.DOUBLE;
+            default -> throw error(position, ErrorKind.OPERAND_TYPE, b.constantTypeKind());
+          };
+      default -> throw error(position, ErrorKind.OPERAND_TYPE, a.constantTypeKind());
+    };
   }
 
   ImmutableList<AnnoInfo> evaluateAnnotations(ImmutableList<AnnoInfo> annotations) {
@@ -1287,7 +1029,8 @@ public class ConstEvaluator {
     for (Ident name : result.remaining()) {
       sym = Resolve.resolve(env, sym, sym, name);
       if (sym == null) {
-        throw error(name.position(), ErrorKind.CANNOT_RESOLVE, name.value());
+        log.error(name.position(), ErrorKind.CANNOT_RESOLVE, name.value());
+        return null;
       }
     }
     if (sym == null) {
@@ -1300,7 +1043,7 @@ public class ConstEvaluator {
     return new TurbineAnnotationValue(annoInfo);
   }
 
-  private @Nullable ArrayInitValue evalArrayInit(ArrayInit t) {
+  private Const.@Nullable ArrayInitValue evalArrayInit(ArrayInit t) {
     ImmutableList.Builder<Const> elements = ImmutableList.builder();
     for (Expression e : t.exprs()) {
       Const arg = eval(e);
@@ -1321,59 +1064,46 @@ public class ConstEvaluator {
       log.error(tree.position(), ErrorKind.EXPRESSION_ERROR);
       return null;
     }
-    switch (ty.tyKind()) {
-      case PRIM_TY:
-        if (!(value instanceof Value)) {
+    return switch (ty.tyKind()) {
+      case PRIM_TY -> {
+        if (!(value instanceof Const.Value constValue)) {
           throw error(tree.position(), ErrorKind.EXPRESSION_ERROR);
         }
-        return coerce(tree.position(), (Value) value, ((Type.PrimTy) ty).primkind());
-      case CLASS_TY:
-      case TY_VAR:
-        return value;
-      case ARRAY_TY:
-        {
-          Type elementType = ((Type.ArrayTy) ty).elementType();
-          ImmutableList<Const> elements =
-              value.kind() == Const.Kind.ARRAY
-                  ? ((Const.ArrayInitValue) value).elements()
-                  : ImmutableList.of(value);
-          ImmutableList.Builder<Const> coerced = ImmutableList.builder();
-          for (Const element : elements) {
-            coerced.add(cast(tree.position(), elementType, element));
-          }
-          return new Const.ArrayInitValue(coerced.build());
+        yield coerce(tree.position(), constValue, ((Type.PrimTy) ty).primkind());
+      }
+      case CLASS_TY, TY_VAR -> value;
+      case ARRAY_TY -> {
+        Type elementType = ((Type.ArrayTy) ty).elementType();
+        ImmutableList<Const> elements =
+            value.kind() == Const.Kind.ARRAY
+                ? ((Const.ArrayInitValue) value).elements()
+                : ImmutableList.of(value);
+        ImmutableList.Builder<Const> coerced = ImmutableList.builder();
+        for (Const element : elements) {
+          coerced.add(cast(tree.position(), elementType, element));
         }
-      default:
-        throw new AssertionError(ty.tyKind());
-    }
+        yield new Const.ArrayInitValue(coerced.build());
+      }
+      default -> throw new AssertionError(ty.tyKind());
+    };
   }
 
   private TurbineError error(int position, ErrorKind kind, Object... args) {
     return TurbineError.format(source, position, kind, args);
   }
 
-  private TurbineError typeError(int position, Value value, TurbineConstantTypeKind kind) {
+  private TurbineError typeError(int position, Const.Value value, TurbineConstantTypeKind kind) {
     return error(position, ErrorKind.TYPE_CONVERSION, value, value.constantTypeKind(), kind);
   }
 
-  public @Nullable Value evalFieldInitializer(Expression expression, Type type) {
+  public Const.@Nullable Value evalFieldInitializer(Expression expression, Type type) {
     try {
       Const value = eval(expression);
       if (value == null || value.kind() != Const.Kind.PRIMITIVE) {
         return null;
       }
-      return (Value) cast(expression.position(), type, value);
-    } catch (TurbineError error) {
-      for (TurbineDiagnostic diagnostic : error.diagnostics()) {
-        switch (diagnostic.kind()) {
-          case CANNOT_RESOLVE:
-            // assume this wasn't a constant
-            return null;
-          default: // fall out
-        }
-      }
-      throw error;
-    } catch (ConstCastError error) {
+      return (Const.Value) cast(expression.position(), type, value);
+    } catch (Const.ConstCastError error) {
       return null;
     }
   }
